--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.25.0",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.5.0",
     "recharts": "^2.12.7",
     "three-globe": "^2.31.1",
     "web-vitals": "^2.1.4"
